<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="info.zhiqing.tinypiratebay.MainActivity">

    <item android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:imeOptions="actionSearch"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always|collapseActionView" />



    <group>
        <item
            android:id="@+id/action_faq"
            android:title="@string/action_faq"
            android:orderInCategory="101"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_feedback"
            android:title="@string/action_feedback"
            android:orderInCategory="102"
            app:showAsAction="never" />

        <!--<item android:id="@+id/action_settings" android:orderInCategory="103"
            android:title="@string/action_settings" app:showAsAction="never" />-->
    </group>

    <group>

        <item
            android:id="@+id/action_about"
            android:title="@string/action_about"
            android:orderInCategory="201"
            app:showAsAction="never" />
    </group>
</menu>
