<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="info.zhiqing.tinypiratebay.activities.TorrentDetailActivity">

    <ScrollView
        android:visibility="invisible"
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <android.support.v7.widget.CardView
                android:id="@+id/info_card"
                android:orientation="vertical"
                android:layout_width="match_parent"
                app:cardCornerRadius="@dimen/cardview_default_radius"
                app:cardElevation="@dimen/cardview_default_elevation"
                android:layout_marginTop="@dimen/text_margin"
                android:layout_marginLeft="@dimen/card_margin_left_right"
                android:layout_marginRight="@dimen/card_margin_left_right"
                app:cardUseCompatPadding="true"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/info_card_header"
                    android:background="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="60dp">

                    <TextView
                        android:id="@+id/info_card_title"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentLeft="true"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />


                </RelativeLayout>

                <TextView
                    android:id="@+id/info_card_text"
                    android:layout_marginLeft="@dimen/text_margin"
                    android:layout_marginRight="@dimen/text_margin"
                    android:layout_marginTop="70dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:id="@+id/link_card"
                android:orientation="vertical"
                android:layout_width="match_parent"
                app:cardCornerRadius="@dimen/cardview_default_radius"
                app:cardElevation="@dimen/cardview_default_elevation"
                android:layout_marginTop="@dimen/text_margin"
                android:layout_marginLeft="@dimen/card_margin_left_right"
                android:layout_marginRight="@dimen/card_margin_left_right"
                app:cardUseCompatPadding="true"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/link_card_header"
                    android:background="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="60dp">

                    <TextView
                        android:id="@+id/link_card_title"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentLeft="true"
                        android:text="@string/detail_link_title"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />


                </RelativeLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_marginTop="70dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/link_card_text"
                        android:layout_margin="@dimen/text_margin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:gravity="right"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <Button
                            android:id="@+id/copy_button"
                            android:background="@color/parent"
                            android:clickable="true"
                            android:foreground="?attr/selectableItemBackground"
                            android:text="@string/button_copy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <Button
                            android:id="@+id/open_button"
                            android:text="@string/button_open"
                            android:clickable="true"
                            android:foreground="?attr/selectableItemBackground"
                            android:background="@color/parent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                </LinearLayout>


            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:id="@+id/intro_card"
                android:orientation="vertical"
                android:layout_width="match_parent"
                app:cardCornerRadius="@dimen/cardview_default_radius"
                app:cardElevation="@dimen/cardview_default_elevation"
                android:layout_marginTop="@dimen/text_margin"
                android:layout_marginLeft="@dimen/card_margin_left_right"
                android:layout_marginRight="@dimen/card_margin_left_right"
                android:layout_marginBottom="@dimen/text_margin"
                app:cardUseCompatPadding="true"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/intro_card_header"
                    android:background="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="60dp">

                    <TextView
                        android:id="@+id/intro_card_title"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:text="@string/detail_intro_title"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentLeft="true"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />


                </RelativeLayout>

                <TextView
                    android:id="@+id/intro_card_text"
                    android:layout_marginLeft="@dimen/text_margin"
                    android:layout_marginRight="@dimen/text_margin"
                    android:layout_marginBottom="@dimen/text_margin"
                    android:layout_marginTop="70dp"
                    android:autoLink="web|email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </android.support.v7.widget.CardView>



        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/loading_view"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ProgressBar
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/loading_text"
            android:textAlignment="center"
            android:text="@string/list_loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/not_exist_view"
        android:visibility="invisible"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:src="@drawable/ic_error_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/empty_list_text"
            android:textAlignment="center"
            android:text="@string/list_empty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>

</FrameLayout>
